--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "reading-time": "^1.5.0",
+    "rehype": "^13.0.2",
     "remark-autolink-headings": "^8.0.0",
     "remark-code-titles": "^0.1.2",
     "remark-slug": "^8.0.0"
